# msi-keyboard-led-controller

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
